estilização do projeto no css

--- a/pages/home.html
+++ b/pages/home.html
@@ -7,7 +7,7 @@
 
     <link rel="stylesheet" href="../style.css">
 </head>
-<body>
+<body class="home">
     <div id="home">
         <h1>Explore o universo</h1>
 
