alteração do background conforme a página e finalização do projeto SPA Universe

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
     <link rel="stylesheet" href="./style.css">
 </head>
-<body>
+<body class="">
     <nav>
         <img src="./assets/logo.svg" alt="Logo Universo">
         <a href="/">Home</a>
