--- a/pages/404.html
+++ b/pages/404.html
@@ -1,3 +1,15 @@
-<h1>
-    Ixi. Deu ruim! Não encontrei a página
-</h1>
+<!DOCTYPE html>
+<html lang="pt-br">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>SPA Universer</title>
+
+    <link rel="stylesheet" href="../style.css">
+</head>
+<body>
+    <div id="error404">
+        <h1>Ixi! Deu ruim. Não encontrei a página.</h1>
+    </div>
+</body>
+</html>
